--- a/projects/uranus/src/lib/components/paper-list/paper-list.component.html
+++ b/projects/uranus/src/lib/components/paper-list/paper-list.component.html
@@ -19,4 +19,4 @@
 </form>
 
 
-<app-paper *ngFor="let p of filteredPapers | async" [paper]="p"></app-paper>
+<uranus-paper *ngFor="let p of filteredPapers | async" [paper]="p"></uranus-paper>
