--- a/projects/uranus/src/lib/components/paper/paper.component.html
+++ b/projects/uranus/src/lib/components/paper/paper.component.html
@@ -5,24 +5,14 @@
         <mat-chip-list aria-label="paper authors">
           <mat-chip *ngFor="let author of paper.authors">{{author.name}}</mat-chip>
         </mat-chip-list> 
-        <!-- <mat-expansion-panel (opened)="abstractOpen = true"
-        (closed)="abstractOpen = false">
-            <mat-expansion-panel-header>
-              <mat-panel-title>
-                Abstract
-              </mat-panel-title>
-              <mat-panel-description *ngIf="!abstractOpen">
-                <div style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis; max-width: 5rem;">                
-                    {{paper.abstract}}
-                </div>
-              </mat-panel-description>
-            </mat-expansion-panel-header>
-            <p>{{paper.abstract}}</p>
-          </mat-expansion-panel> -->
     </mat-card-content>
     <mat-card-actions>
-        <a *ngIf="paper.githubLink" mat-button  [href]="paper.githubLink">
-          <img *ngIf="paper.githubLink" [src]="paper.githubStarsSvgLink"/>
+        <a *ngIf="paper.githubStarsSvgLink" mat-button  [href]="paper.githubLink">
+          <img [src]="paper.githubStarsSvgLink"/>
+        </a>
+
+        <a *ngIf="paper.githubLink && !paper.githubStarsSvgLink" matTooltip="Link" mat-icon-button  [href]="paper.githubLink">
+          <mat-icon>link</mat-icon>
         </a>
         
         <a *ngIf="paper.paperLink" matTooltip="PDF" mat-icon-button (click)="openInNewTab(paper.paperLink)">
