--- a/projects/uranus/src/lib/components/paper/paper.component.html
+++ b/projects/uranus/src/lib/components/paper/paper.component.html
@@ -3,7 +3,7 @@
     <mat-card-subtitle>{{paper.publicAt}}</mat-card-subtitle> 
     <mat-card-content>
         <mat-chip-list aria-label="paper authors">
-          <mat-chip *ngFor="let author of paper.authors">{{author.name}}</mat-chip>
+          <mat-chip *ngFor="let author of paper.authors" (click)="clickAuthor(author)">{{author.name | removeSuffix:"*"}}</mat-chip>
         </mat-chip-list> 
     </mat-card-content>
     <mat-card-actions>
