--- a/projects/uranus/src/lib/components/paper/paper.component.html
+++ b/projects/uranus/src/lib/components/paper/paper.component.html
@@ -1,6 +1,18 @@
 <mat-card>
     <mat-card-title>{{ paper.name }}</mat-card-title>
-    <mat-card-subtitle>{{paper.publicAt}}</mat-card-subtitle> 
+    <mat-card-subtitle>
+      <div class="subtitle-wrapper">
+        <div class="row">
+          <mat-icon>place</mat-icon>
+          <span>{{paper.publicAt}}</span>
+        </div>
+        <div class="row">
+          <mat-icon>event</mat-icon>
+          <span>{{paper.year}} {{paper.month}}</span>
+        </div>
+      </div>
+      
+    </mat-card-subtitle> 
     <mat-card-content>
         <mat-chip-list aria-label="paper authors">
           <mat-chip *ngFor="let author of paper.authors" (click)="clickAuthor(author)">{{author.name | removeSuffix:"*"}}</mat-chip>
