--- a/projects/uranus/src/lib/components/paper/paper.component.scss
+++ b/projects/uranus/src/lib/components/paper/paper.component.scss
@@ -11,3 +11,15 @@
         gap: 4px;
     }
 }
+
+.simple-paper {
+    .title {
+        margin-bottom: 0;
+    }
+    .authors {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 8px;
+    }
+}
