--- a/projects/uranus/src/lib/components/paper-list/paper-list.component.scss
+++ b/projects/uranus/src/lib/components/paper-list/paper-list.component.scss
@@ -4,3 +4,18 @@
   gap: 1rem;
   
 }
+
+.container {
+  padding: 1rem;
+  min-height: 100vh;
+  .toolbar {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+}
+@media only screen and (min-width: 960px){
+  .container {
+      width: 50%;
+      margin: auto;
+  }
+}
