--- a/projects/uranus/src/lib/components/paper/paper.component.scss
+++ b/projects/uranus/src/lib/components/paper/paper.component.scss
@@ -21,5 +21,12 @@
         flex-direction: row;
         flex-wrap: wrap;
         gap: 8px;
+
+        .author {
+            cursor: pointer;
+        }
+    }
+    .date {
+        color: gray;
     }
 }
