--- a/projects/uranus/src/lib/components/person-list/person-list.component.html
+++ b/projects/uranus/src/lib/components/person-list/person-list.component.html
@@ -15,7 +15,7 @@
 
         <ng-container *ngSwitchDefault>
           <div class="uranus person-list">
-            <uranus-person *ngFor="let p of item.people" [person]="p"></uranus-person>
+            <uranus-person *ngFor="let p of item.people" [person]="p" [mode]="mode"></uranus-person>
           </div>
         </ng-container>
       </ng-container>
